<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gry"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    android:padding="@dimen/dp5">

    <LinearLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp30"
            android:text="@string/addBalance"
            android:layout_marginTop="@dimen/dp5"
            android:textColor="@color/gry"
            android:gravity="center|start"
            android:textSize="@dimen/sp14"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/txtAmount"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@drawable/edit_text_shape_with_edg"
            android:gravity="center"
            android:layout_marginTop="@dimen/dp10"
            android:hint="00.00"
            android:inputType="numberDecimal"
            tools:ignore="HardcodedText" />

        <RadioGroup
            android:id="@+id/rgPaymentMethods"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp10">

            <RadioButton
                android:id="@+id/rbPayPall"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp48"
                android:drawableStart="@drawable/ic_paypal"
                android:drawablePadding="@dimen/dp5"
                android:text="@string/payPall" />

            <RadioButton
                android:id="@+id/rbGooglePay"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp48"
                android:visibility="gone"
                android:drawableStart="@drawable/ic_google_play"
                android:drawablePadding="@dimen/dp5"
                android:text="@string/googlePay" />

        </RadioGroup>

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp30"
            android:text="@string/cancelPay"
            android:paddingStart="@dimen/dp5"
            android:paddingEnd="@dimen/dp5"
            android:layout_gravity="end"
            android:textSize="@dimen/sp14"
            android:textColor="@color/gry"
            android:textStyle="italic"
            android:gravity="center|end"/>

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_marginTop="@dimen/dp5"
            android:background="@drawable/edit_text_shape_with_edg"
            android:backgroundTint="@color/yellow"
            android:text="@string/add_balance"
            android:textColor="@color/gry"
            android:drawableStart="@drawable/ic_money"
            android:textSize="@dimen/sp16"
            android:textStyle="bold" />



    </LinearLayout>

</RelativeLayout>